; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/dodger/extr_keymap.c_setLayer.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/dodger/extr_keymap.c_setLayer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_COLEMAK = common dso_local global i32 0, align 4
@_GAME = common dso_local global i32 0, align 4
@_MUSIC = common dso_local global i32 0, align 4
@guitar = common dso_local global i32 0, align 4
@mario = common dso_local global i32 0, align 4
@marioe = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setLayer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @_COLEMAK, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @_COLEMAK, align 4
  %8 = call i32 @set_single_persistent_default_layer(i32 %7)
  br label %25

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @_GAME, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  %14 = load i32, i32* @_GAME, align 4
  %15 = call i32 @set_single_persistent_default_layer(i32 %14)
  br label %24

16:                                               ; preds = %9
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @_MUSIC, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i32, i32* @_MUSIC, align 4
  %22 = call i32 @set_single_persistent_default_layer(i32 %21)
  br label %23

23:                                               ; preds = %20, %16
  br label %24

24:                                               ; preds = %23, %13
  br label %25

25:                                               ; preds = %24, %6
  ret void
}

declare dso_local i32 @set_single_persistent_default_layer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
